--- a/css/styles.css
+++ b/css/styles.css
@@ -178,8 +178,17 @@ a {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
+}
+
+.icon--white {
+    fill: #fff;
 }
 
 .icon-container {
@@ -192,6 +201,10 @@ a {
     background: #f3f9fa;
 }
 
+.icon-container--accent {
+    background: var(--color-accent);
+
+}
 
 /* Buttons */
 .btn {
@@ -475,5 +488,37 @@ a {
 @media screen and (min-width:1024px) {
     .grid--cols-3 {
         grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+/* Testimonial */
+
+
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image>img {
+    width: 100%;
+}
+
+.testimonial__image>.icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width:768px) {
+    .testimonial .quote, .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
