--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,10 @@ a {
     color: #fff;
 }
 
-
+.btn--stretched {
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
 
 @media screen and (min-width:1024px) {
     .btn {
@@ -520,5 +523,47 @@ a {
 
     .testimonial .quote {
         margin-left: 6rem;
+    }
+}
+
+
+/* Callout */
+.callout {
+    padding: 4rem;
+    border-radius: 30px;
+}
+
+.callout--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.callout__heading {
+    color: #fff;
+    margin-top: 0;
+    font-size: 3rem;
+}
+
+.callout .btn {
+    align-self: center;
+    justify-self: center;
+}
+
+.callout__content {
+    text-align: center;
+}
+
+@media screen and (min-width:768px) {
+    .callout .grid--cols-2 {
+        grid-template-columns: 1fr auto;
+    }
+
+    .callout__content {
+        text-align: left;
+    }
+
+    .callout .btn {
+        justify-self: start;
+        margin: 0 2rem;
     }
 }
