--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,10 @@ a {
     color: #fff;
 }
 
+.card--primary .badge--primary {
+    background: #126de4;
+}
+
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
@@ -383,6 +387,10 @@ a {
     margin-bottom: 2rem;
 }
 
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -394,6 +402,18 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan {
+    transition: transform .2s ease-out;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width:1024px) {
@@ -770,4 +790,16 @@ a {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
 
+}
+
+
+/* Plans block */
+
+.block-plans .grid {
+    gap: 8rem 4rem;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto;
 }
