--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,10 @@
 
 
 /* Typography */
-
+::selection {
+    background: var(--color-primary);
+    color: #fff;
+}
 
 html {
     font-size: 62.5%;
@@ -53,6 +56,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
+    font-weight: 500;
 }
 
 p {
@@ -147,7 +151,6 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -158,6 +161,7 @@ a {
 .list--tick {
     list-style-image: url("../icons/tick.svg");
     padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -439,6 +443,7 @@ a {
 
 .media {
     display: flex;
+    margin-bottom: 4rem;
 }
 
 .media__title {
@@ -652,17 +657,17 @@ a {
     color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1, .block--dark h2, .block--dark h3 {
     color: #fff;
 }
 
 .block--skewed-right {
-    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 80%);
+    clip-path: polygon(0 0, 100% 0%, 100% 100%, 0 90%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-    clip-path: polygon(0 0, 100% 0%, 100% 80%, 0 100%);
+    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%);
     padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
@@ -738,9 +743,6 @@ a {
 
 
 /* Hero */
-.hero {
-    clip-path: polygon(0 0, 100% 0%, 100% 90%, 0 100%);
-}
 
 .hero__tagline {
     font-size: 2rem;
@@ -829,4 +831,26 @@ a {
         order: 2;
     }
 
+}
+
+
+/* Showcase */
+
+.block-showcase__image>img {
+    width: 100%;
+}
+
+@media screen and (min-width:768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+
+    .block-showcase__image {
+        justify-self: end;
+    }
+
+    .block-showcase__image>img {
+        width: auto;
+        max-width: 700px;
+    }
 }
